Closed Bug 322575 Opened 19 years ago Closed 19 years ago

Address Book preferences not removed on deletion of Address Book.

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Unassigned)

Details

(Keywords: regression)

Attachments

(1 file)

When we delete an address book we are not removing the preferences that were associated with the address book. The only reason the addressbook is remaining deleted is because of bug 249613.

This is a regression from bug 226005.

Fix coming up.
The problem is the DeleteBranch call that was there originally was changed to a ClearUserPref call which doesn't work on for a pref branch. This patch fixes the problem.

Bug 226005 didn't go into the 1.8 branch so it doesn't need fixing there.
Attachment #207729 - Flags: superreview?(bienvenu)
Attachment #207729 - Flags: review?(bienvenu)
Attachment #207729 - Flags: superreview?(bienvenu)
Attachment #207729 - Flags: superreview+
Attachment #207729 - Flags: review?(bienvenu)
Attachment #207729 - Flags: review+
Checked in:

Checking in mailnews/addrbook/src/nsDirPrefs.cpp;
/cvsroot/mozilla/mailnews/addrbook/src/nsDirPrefs.cpp,v  <--  nsDirPrefs.cpp
new revision: 1.107; previous revision: 1.106
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: