Bug 322575 Address Book preferences not removed on deletion of Address Book - fix regression from bug 226005. r/sr=bienvenu